--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,23 @@ figure video {
     font-weight: 600;
 }
 
+#video_no_played{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.55);
+    margin: 0 auto;
+    z-index: 99999;
+    padding-top: 150px;
+    color: #f00;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    display: none;
+}
+
 @media (max-width: 700px) {
     #video_player video,
     #video_player figcaption {
